# testbazel

./: .bazelignore  .bazelrc  .gitignore  .prettierignore  BUILD  MODULE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-project.json
apps/frontend/: BUILD  defs.bzl  nitro.config.ts  package.json
apps/server/: BUILD
apps/server/src/: main.rs
