module(
    name = "testbazel",
    version = "0.0.0",
)

# Rust configuration
bazel_dep(name = "rules_rust", version = "0.61.0")

RUST_EDITION = "2024"

RUST_VERSION = "1.87.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# External crates
crate.spec(
    package = "axum",
    version = "0.8.4",
)
crate.spec(
    package = "tokio",
    version = "1.45.1",
    features = [
        "full",
    ],
)
crate.spec(
    package = "tower",
    version = "0.5.2",
)
crate.from_specs()
use_repo(crate, "crates")
